--- a/public/html/index.html
+++ b/public/html/index.html
@@ -11,11 +11,22 @@
 </head>
 
 <body>
+    <!-- Total Work & Break Time - Start -->
+    <div class="row">
+        <div class="col-md-7 col-md-offset-2">
+            <h3 class="worklabel">
+            <label>Set Work Time : </label><input id=inputworktime value="2"/>
+            <br>
+            <label>Set Break Time :</label><input id=inputbreaktime value="1"/>
+            </h3>
+        </div>
+    </div>
+    <!-- Total Work & Break Time - End -->
     <div class="container">
         <div class="row">
             <div class="col-md-7 col-md-offset-2">
                 <h1 id="timer">
-                  <span id="minutes">00</span>:<span id="seconds">05</span>
+                  <span id="minutes">00</span>:<span id="seconds">00</span>
                 </h1>
             </div>
         </div>
@@ -24,9 +35,23 @@
                 <button class="btn btn-success btn-block" id="start">Start</button>
                 <button class="btn btn-primary btn-block" id="break">Break</button>
                 <button class="btn btn-primary btn-block" id="reset">Reset</button>
+                <button class="btn btn-primary btn-block" id="progress">Progress</button>
+                <button class="btn btn-primary btn-block" id="resetprogress">Reset Progress</button>
             </div>
         </div>
     </div>
+    <!-- Total Work & Break Time - Start -->
+    <div class="row" id=divprogress>
+        <div class="col-md-7 col-md-offset-2">
+            <h3 class="worklabel">
+          <label>Total Work Time : </label><span id="worktime">00</span>
+          <label>Total Break Time : </label><span id="breaktime">00</span>
+          </h3>
+        </div>
+    </div>
+    <div class="row" id=divarray>
+    </div>
+    <!-- Total Work & Break Time - End -->
     <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
     <script src="js/app.js"></script>
 </body>
